# XScript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
doc/: graph.drawio
scripts/: script_0.xs  test.xs  xui.xs
src/: CMakeLists.txt  allocator.cpp  allocator.h  ast.cpp  ast.h  awaitable.cpp  awaitable.h  buffer.cpp  buffer.h  builtin.cpp  builtin.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  concurrent_queue.hpp  context.cpp  context.h  coroutine.cpp  coroutine.h  endian.hpp  exception.cpp  exception.h  executor.h  flags.hpp  float16.cpp  float16.h  grammar.cpp  grammar.h  interpreter.cpp  interpreter.h  json.hpp  language_server.h  library.cpp  library.h  logger.cpp  logger.h  machine.cpp  machine.h  meta.cpp  (+42 more)
src/lib/: x_lib.h
std/: algorithm.xs  array.xs  buffer.xs  condition.xs  coroutine.xs  exception.xs  file.xs  hashmap.xs  iconv.xs  lock.xs  path.xs  priority_queue.xs  queue.xs  regex.xs  socket.xs  stack.xs  string.xs  time.xs  traits.xs
tests/: CMakeLists.txt  awaitable_test.cpp  json_test.cpp  parse_test.cpp  test.xs  xlib_test.cpp  zip_test.cpp
tools/: CMakeLists.txt  xcompiler.cpp  xlauncher.cpp  xlserver.cpp  xlserver.json  xmake.json
