set(SRC_FILES 
"url.hpp"
"json.hpp"
"xlib.h"
"xlib.cpp"
"float16.h"
"float16.cpp"
"type.h"
"buffer.h"
"buffer.cpp"
"ast.h"
"ast.cpp"
"meta.h"
"meta.cpp"
"module.h"
"module.cpp"
"grammar.h"
"grammar.cpp"
"builtin.h"
"builtin.cpp"
"visitor.h"
"visitor.cpp"
"symbols.h"
"symbols.cpp"
"codegen.h"
"codegen.cpp"
"semantic.h"
"semantic.cpp"
"compiler.h"
"compiler.cpp"
"exception.h"
"exception.cpp"
"value.h"
"value.cpp"
"object.h"
"object.cpp"
"runtime.h"
"runtime.cpp"
"context.h"
"context.cpp"
"allocator.h"
"allocator.cpp"
"scheduler.h"
"scheduler.cpp"
"interpreter.h"
"interpreter.cpp"
"virtual_machine.h"
"virtual_machine.cpp"
"language_server.h"
"language_server.cpp")

add_library(xs STATIC ${SRC_FILES})
set_property(TARGET xs PROPERTY CXX_STANDARD 20)
