set(SRC_FILES 
"url.hpp"
"json.hpp"
"zip.h"
"zip.cpp"
"xlib.h"
"xlib.cpp"
"float16.h"
"float16.cpp"
"type.h"
"logger.h"
"logger.cpp"
"buffer.h"
"buffer.cpp"
"ast.h"
"ast.cpp"
"meta.h"
"meta.cpp"
"module.h"
"module.cpp"
"grammar.h"
"grammar.cpp"
"builtin.h"
"builtin.cpp"
"visitor.h"
"visitor.cpp"
"symbols.h"
"symbols.cpp"
"codegen.h"
"codegen.cpp"
"semantic.h"
"semantic.cpp"
"compiler.h"
"compiler.cpp"
"exception.h"
"exception.cpp"
"value.h"
"value.cpp"
"object.h"
"object.cpp"
"runtime.h"
"runtime.cpp"
"context.h"
"context.cpp"
"allocator.h"
"allocator.cpp"
"scheduler.h"
"scheduler.cpp"
"interpreter.h"
"interpreter.cpp"
"virtual_machine.h"
"virtual_machine.cpp")

set(3RDPARTY ${CMAKE_SOURCE_DIR}/3rdparty)
add_library(xs STATIC ${SRC_FILES})
set_property(TARGET xs PROPERTY CXX_STANDARD 20)
target_compile_definitions(xs PRIVATE -D_CRT_SECURE_NO_WARNINGS)
target_include_directories(xs PRIVATE ${3RDPARTY}/stb ${3RDPARTY}/uchardet/src ${3RDPARTY}/win-iconv ${3RDPARTY}/concurrentqueue)
target_link_libraries(xs PRIVATE libuchardet_static iconv-static)